common-reset-styles

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,4 +14,15 @@
     --active-link-color: #FE390C;
     --nav-link-color: #A9A9AA;
     --contact-link-color: #FE390C;
+
+    --primary-background-color: #ECF0F0;
+    --secondary-background-color: #111214;
+
+    --heading-font: 'Anton', sans-serif;
+    --text-font: 'Montserrat', sans-serif;
+    --heading-line-height: 1.5;
+    --heading-font-weight: 400;
+    --primary-text-line-height: 2.3;
+    --secondary-text-line-height: 1.7;
+    --heading-font-weight: 500;
 }
