--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,114 @@
+:root {
+  --dark-title-color: #111214;
+  --light-title-color: #FFFFFF;
+  --accent-title-color: #FE390C;
+  --primary-text-color: #A9A9AA;
+  --dark-text-color: #111214;
+  --light-text-color: #FFFFFF;
+  --accent-text-color: #FE390C;
+  --placeholders-color: rgba(169, 169, 170, 0.6);
+  --icons-color: #ffffff;
+  --icons-background-color: rgba(255, 255, 255, 0.1);
+  --btn-color: #FE390C;
+  --btn-text: #ffffff;
+  --active-link-color: #FE390C;
+  --nav-link-color: #A9A9AA;
+  --contact-link-color: #FE390C;
+  --primary-background-color: #ECF0F0;
+  --secondary-background-color: #111214;
+  --heading-font: "Anton", sans-serif;
+  --text-font: "Montserrat", sans-serif;
+  --heading-line-height: 1.5;
+  --heading-font-weight: 400;
+  --primary-text-line-height: 2.3;
+  --secondary-text-line-height: 1.7;
+  --heading-font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0 50px white;
+  -webkit-text-fill-color: black;
+}
+
 body {
-  background-color: red;
+  font-family: var(text-font);
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: tan;
+}
+@media (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1140px;
+  }
+}
+
+.button {
+  display: block;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }/*# sourceMappingURL=main.css.map */
