--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
-body {
-    background-color: red;
-}
+@import "./utils/variables";
+@import "./utils/mixins";
+
+@import "./base/reset";
+@import "./base/common";
+
