--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,6 +10,7 @@
     --icons-color: #ffffff;
     --icons-background-color: rgba(255, 255, 255, 0.1);
     --btn-color: #FE390C;
+    --btn-color-hover: #D82E00;
     --btn-text: #ffffff;
     --active-link-color: #FE390C;
     --nav-link-color: #A9A9AA;
