--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --dark-title-color: #111214;
   --light-title-color: #FFFFFF;
@@ -10,6 +11,7 @@
   --icons-color: #ffffff;
   --icons-background-color: rgba(255, 255, 255, 0.1);
   --btn-color: #FE390C;
+  --btn-color-hover: #D82E00;
   --btn-text: #ffffff;
   --active-link-color: #FE390C;
   --nav-link-color: #A9A9AA;
@@ -104,11 +106,128 @@ body {
   display: block;
   border: none;
   border-radius: 4px;
+  padding: 16px 24px;
+  background-color: var(--btn-color);
+  color: var(--btn-text);
+  font-family: var(--text-font);
+  font-size: 12px;
+  font-weight: bold;
   cursor: pointer;
+}
+.button:hover, .button:focus {
+  background-color: var(--btn-color-hover);
 }
 
 .is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+
+.header {
+  padding: 35px 16px 0px 16px;
+  background-color: #111214;
+}
+
+.nav {
+  display: none;
+}
+
+.logo {
+  display: block;
+  font-family: var(--heading-font);
+  font-weight: 700;
+  font-size: 32;
+  line-height: var(--heading-font-height);
+}
+
+.logo-letter:nth-child(1) {
+  color: #ffffff;
+}
+.logo-letter:nth-child(2) {
+  color: rgba(169, 169, 170, 0.5);
+}
+.logo-letter:nth-child(3) {
+  color: #FE390C;
+}
+
+.hero {
+  display: flex;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin: 0 auto;
+  width: 100%;
+  height: 765px;
+  background-color: var(--secondary-background-color);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Oleksandr_Moskalets_photo.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero__content {
+  margin-top: 280px;
+}
+
+.hero__greatings {
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--light-title-color);
+  margin-bottom: 16px;
+}
+
+.hero__greatings-accent {
+  color: var(--accent-title-color);
+}
+
+.hero__title {
+  font-size: 58px;
+  font-weight: regular;
+  color: var(--light-title-color);
+  margin-bottom: 16px;
+}
+
+.hero__description {
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--light-title-color);
+  margin-bottom: 24px;
+}
+
+/* Стилі для соціальних посилань */
+.hero__social-links {
+  /* Додайте стилі для контейнера соціальних посилань тут */
+}
+
+.socials {
+  display: flex;
+  gap: 32px;
+  /* Додайте стилі для списку соціальних посилань тут */
+}
+
+.socials--column {
+  flex-direction: column;
+}
+
+.socials__item {
+  width: 42px;
+  height: 42px;
+  /* Додайте стилі для окремого елементу списку соціальних посилань тут */
+}
+
+.socials__item-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--icons-background-color);
+  color: var(--icons-color);
+}
+
+.socials__item-icon {
+  width: 20px;
+  height: 20px;
+  color: var(--icons-color);
 }/*# sourceMappingURL=main.css.map */
