--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -43,7 +43,21 @@ body {
     display: block;
     border: none;
     border-radius: 4px;
+
+    padding: 16px 24px;
+
+    background-color: var(--btn-color);
+    color: var(--btn-text);
+
+    font-family: var(--text-font);
+    font-size: 12px;
+    font-weight: bold;
+
     cursor: pointer;
+
+    &:hover, &:focus {
+            background-color: var(--btn-color-hover);
+        }
 }
 
 .is-hidden {
