--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,7 @@
 @import "./base/reset";
 @import "./base/common";
 
+@import './components/header';
+@import './components/logo';
+@import './components/hero';
+@import './components/socials';
