--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,8 @@
 @import './components/logo';
 @import './components/hero';
 @import './components/socials';
+@import './components/about';
+@import './components/stacks';
+@import './components/service';
+@import './components/portfolio';
+@import './components/testimonials';
