--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -16,7 +16,7 @@
     --nav-link-color: #A9A9AA;
     --contact-link-color: #FE390C;
 
-    --primary-background-color: #ECF0F0;
+    --primary-background-color: #fff;
     --secondary-background-color: #111214;
 
     --heading-font: 'Anton', sans-serif;
@@ -25,5 +25,5 @@
     --heading-font-weight: 400;
     --primary-text-line-height: 2.3;
     --secondary-text-line-height: 1.7;
-    --heading-font-weight: 500;
+    --text-font-weight: 500;
 }
