--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   --active-link-color: #FE390C;
   --nav-link-color: #A9A9AA;
   --contact-link-color: #FE390C;
-  --primary-background-color: #ECF0F0;
+  --primary-background-color: #fff;
   --secondary-background-color: #111214;
   --heading-font: "Anton", sans-serif;
   --text-font: "Montserrat", sans-serif;
@@ -24,7 +24,7 @@
   --heading-font-weight: 400;
   --primary-text-line-height: 2.3;
   --secondary-text-line-height: 1.7;
-  --heading-font-weight: 500;
+  --text-font-weight: 500;
 }
 
 h1,
@@ -80,11 +80,15 @@ body {
   overflow: hidden;
 }
 
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .container {
   margin: 0 auto;
   padding-left: 16px;
   padding-right: 16px;
-  background-color: tan;
 }
 @media (min-width: 480px) {
   .container {
@@ -100,6 +104,26 @@ body {
   .container {
     width: 1140px;
   }
+}
+
+.title {
+  margin-top: 60px;
+  display: flex;
+  gap: 17px;
+  align-items: center;
+  text-transform: uppercase;
+  color: var(--dark-text-color);
+  font-family: var(--heading-font);
+  font-size: 32px;
+  font-weight: var(--heading-font-weight);
+  line-height: var(--heading-line-height);
+}
+
+.title-accent {
+  font-family: var(--heading-font);
+  color: var(--accent-text-color);
+  font-size: 64px;
+  font-weight: 400;
 }
 
 .button {
@@ -153,6 +177,7 @@ body {
 
 .hero {
   display: flex;
+  align-items: center;
   padding-left: 16px;
   padding-right: 16px;
   margin: 0 auto;
@@ -163,10 +188,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.hero__content {
-  margin-top: 280px;
 }
 
 .hero__greatings {
@@ -194,15 +215,9 @@ body {
   margin-bottom: 24px;
 }
 
-/* Стилі для соціальних посилань */
-.hero__social-links {
-  /* Додайте стилі для контейнера соціальних посилань тут */
-}
-
 .socials {
   display: flex;
   gap: 32px;
-  /* Додайте стилі для списку соціальних посилань тут */
 }
 
 .socials--column {
@@ -212,7 +227,6 @@ body {
 .socials__item {
   width: 42px;
   height: 42px;
-  /* Додайте стилі для окремого елементу списку соціальних посилань тут */
 }
 
 .socials__item-link {
@@ -226,8 +240,226 @@ body {
   color: var(--icons-color);
 }
 
+.socials__item-link--bg-gray-col-white {
+  background-color: gray;
+  color: white;
+  /* Додайте стилі для посилання з фоном сірого кольору тут */
+}
+
 .socials__item-icon {
   width: 20px;
   height: 20px;
   color: var(--icons-color);
+}
+
+.about__stats {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__stat {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-left: auto;
+}
+.about__stat:nth-child(2n) {
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.about__stat-info {
+  display: flex;
+  gap: 12px;
+  align-items: end;
+}
+
+.abut__stat-text {
+  color: var(--dark-text-color);
+  font-family: var(--text-font);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: var(--secondary-text-line-height);
+}
+
+.about__description {
+  margin-left: 76px;
+  font-family: var(--text-font);
+  font-size: 12px;
+  font-weight: var(--text-font-weight);
+  line-height: var(--primary-text-line-height);
+}
+.about__description:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.stacks {
+  background-color: #F7F7F7;
+}
+
+.stacks__list {
+  display: flex;
+  gap: 27px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 48px;
+}
+
+.stacks__actions {
+  background-color: var(--secondary-background-color);
+  padding: 50px 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.stacks__actions-title {
+  color: var(--light-text-color);
+  text-align: center;
+  font-family: var(--heading-font);
+  font-size: 32px;
+  font-weight: var(--text-font-weight);
+  text-transform: capitalize;
+  margin-bottom: 40px;
+}
+
+.stacks__hire-button {
+  margin-bottom: 19px;
+}
+
+.stacks__download-button {
+  background-color: transparent;
+  color: var(--btn-text);
+  border: none;
+}
+
+.service-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.service__list {
+  display: flex;
+  gap: 32px;
+  flex-direction: column;
+}
+
+.service__item {
+  padding: 40px 20px 20px 20px;
+  background-color: #F7F7F7;
+}
+
+.service__item-icon {
+  margin-bottom: 24px;
+}
+
+.service__item-title {
+  margin-bottom: 8px;
+  font-family: var(--text-font);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: var(--primary-text-line-height);
+  color: var(--dark-title-color);
+}
+
+.portfolio {
+  background-color: #ECF0F0;
+}
+
+.portfolio__content {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  margin-bottom: 32px;
+}
+
+.portfolio__filter {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+
+.portfolio__filter-button {
+  border: none;
+  color: var(--primary-text-color);
+  text-transform: uppercase;
+}
+
+.portfolio__pagination {
+  display: flex;
+  gap: 24px;
+  margin-left: auto;
+}
+
+.portfolio__pagination-btn {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: var(--btn-color);
+}
+
+.portfolio__pagination-icon {
+  fill: var(--icons-color);
+}
+
+.portfolio__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio__list-item-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio__list-item-link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio__list-item-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio__list-item-img-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio__list-item-overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio__list-item-link:hover .portfolio__list-item-overlay {
+  transform: translateY(0%);
+  opacity: 1;
+}
+.portfolio__list-item-link:focus .portfolio__list-item-overlay {
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+.portfolio__list-item-title {
+  font-family: var(--heading-font);
+  font-size: 32px;
+  font-weight: var(--heading-font-weight);
+  color: var(--light-title-color);
+  text-transform: uppercase;
+}
+
+.portfolio__list-item-subtitle {
+  font-family: var(--heading-font);
+  font-size: 16px;
+  font-weight: var(--heading-font-weight);
+  color: var(--light-title-color);
 }/*# sourceMappingURL=main.css.map */
