--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     display: flex;
-    justify-content: center;
+    align-items: center;
 
     padding-left: 16px;
     padding-right: 16px;
@@ -18,7 +18,6 @@
 }
 
 .hero__content {
-    // margin-top: 280px;
 }
 
 .hero__greatings {
