--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/common";
 
 @import './components/header';
+@import './components/pagination';
 @import './components/logo';
 @import './components/hero';
 @import './components/socials';
@@ -12,4 +13,5 @@
 @import './components/stacks';
 @import './components/service';
 @import './components/portfolio';
-@import './components/testimonials';
+@import './components/testomonials';
+@import './components/footer';
