--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,4 @@
 @import './components/portfolio';
 @import './components/testomonials';
 @import './components/footer';
+@import './components/form';
