--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,7 @@ body {
 }
 
 .header {
+  position: relative;
   padding: 35px 16px 0px 16px;
   background-color: #111214;
 }
@@ -596,4 +597,22 @@ body {
 .form-textarea {
   resize: none;
   height: 124px;
+}
+
+.mobile-menu__btn--open {
+  position: absolute;
+  top: 38px;
+  right: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 47px;
+  height: 35px;
+  background-color: transparent;
+  border: 2px solid #57595d;
+  border-radius: 2px;
+}
+
+.mobile-menu__icon--open {
+  fill: #57595d;
 }/*# sourceMappingURL=main.css.map */
