--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,4 @@
 @import './components/testomonials';
 @import './components/footer';
 @import './components/form';
+@import './components/mobile-menu';
