--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,20 +1,23 @@
 .hero {
-    display: flex;
-    align-items: center;
 
-    padding-left: 16px;
-    padding-right: 16px;
-    margin: 0 auto;
-
-    width: 100%;
-    height: 765px;
 
     background-color: var(--secondary-background-color);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(/images/Oleksandr_Moskalets_photo.jpg);
+    url(../images/Oleksandr_Moskalets_photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+.hero-container {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;    
+    padding-left: 16px;
+    padding-right: 16px;
+
+    height: 765px;
 }
 
 .hero__content {
@@ -38,6 +41,10 @@
     color: var(--light-title-color);
 
     margin-bottom: 16px;
+
+    @include desktop {
+        font-size: 130px;        
+    }
 }
 
 .hero__description {
