--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,9 +1,8 @@
 .hero {
-
-
     background-color: var(--secondary-background-color);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/Oleksandr_Moskalets_photo.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(47, 48, 58, 0.1)),
+    url(../images/hero-picture.jpg);
+    // url(../images/Oleksandr_Moskalets_photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -29,6 +28,10 @@
     color: var(--light-title-color);
 
     margin-bottom: 16px;
+
+    @include desktop {
+        margin-bottom: 10px;
+    }
 }
 
 .hero__greatings-accent {
@@ -43,7 +46,8 @@
     margin-bottom: 16px;
 
     @include desktop {
-        font-size: 130px;        
+        font-size: 130px;      
+        margin-bottom: 12px;  
     }
 }
 
