--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,15 +7,13 @@
 }
 
 .logo-letter {
+    font-size: 40px;
+    
     &:nth-child(1) {
         color: #ffffff;
     }
 
     &:nth-child(2) {
-        color: rgba(169, 169, 170, 0.5);
-    }
-
-    &:nth-child(3) {
         color: #FE390C;
     }
 }
