--- a/css/main.css
+++ b/css/main.css
@@ -386,7 +386,12 @@ body {
 }
 
 .stacks {
-  background-color: #F7F7F7;
+  background-image: linear-gradient(to bottom, #F7F7F7 50%, var(--primary-background-color) 50%);
+}
+@media (min-width: 1200px) {
+  .stacks {
+    padding-top: 80px;
+  }
 }
 
 .stacks__list {
@@ -396,6 +401,26 @@ body {
   justify-content: center;
   margin-bottom: 48px;
 }
+@media (min-width: 1200px) {
+  .stacks__list {
+    margin-bottom: 80px;
+  }
+}
+
+.stacks__link {
+  color: #A7AAB4;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.stacks__link:hover {
+  color: #2196f3;
+}
+.stacks__link:focus {
+  color: #2196f3;
+}
+
+.stacks__icon {
+  fill: currentColor;
+}
 
 .stacks__actions {
   background-color: var(--secondary-background-color);
@@ -403,6 +428,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+@media (min-width: 1200px) {
+  .stacks__actions {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
 }
 
 .stacks__actions-title {
@@ -414,15 +445,32 @@ body {
   text-transform: capitalize;
   margin-bottom: 40px;
 }
+@media (min-width: 1200px) {
+  .stacks__actions-title {
+    font-size: 40px;
+  }
+}
 
 .stacks__hire-button {
-  margin-bottom: 19px;
+  margin: 0 auto 20px auto;
 }
 
 .stacks__download-button {
   background-color: transparent;
   color: var(--btn-text);
   border: none;
+  cursor: pointer;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.stacks__download-button:hover {
+  transform: scale(1.1);
+}
+
+.stacks__download-icon {
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.stacks__download-button:hover .stacks__download-icon {
+  transform: scale(1.2);
 }
 
 .service-container {
@@ -436,10 +484,18 @@ body {
   gap: 32px;
   flex-direction: column;
 }
+@media (min-width: 1200px) {
+  .service__list {
+    flex-direction: row;
+  }
+}
 
 .service__item {
   padding: 40px 20px 20px 20px;
   background-color: #F7F7F7;
+}
+.service__item:hover, .service__item:focus {
+  background-color: var(--active-link-color);
 }
 
 .service__item-icon {
