--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -1,5 +1,9 @@
 .stacks {
-    background-color: #F7F7F7;
+    background-image: linear-gradient(to bottom, #F7F7F7 50%, var(--primary-background-color) 50%);
+
+    @include desktop {
+        padding-top: 80px;
+    }
 }
 
 .stacks__list {
@@ -9,11 +13,30 @@
     justify-content: center;
 
     margin-bottom: 48px;
+
+    @include desktop {
+        margin-bottom: 80px;
+    }
 }
 
 .stacks__item {}
 
+.stacks__link {
+    color: #A7AAB4;
+    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+        color: #2196f3;
+    }
+        
+    &:focus {
+        color: #2196f3;
+    }
+}
+
 .stacks__icon {
+    fill: currentColor
 }
 
 .stacks__actions {
@@ -24,6 +47,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include desktop {
+        padding-top: 75px;
+        padding-bottom: 75px;
+    }
 }
 
 .stacks__actions-title {
@@ -35,16 +63,33 @@
     text-transform: capitalize;
 
     margin-bottom: 40px;
+
+    @include desktop {
+        font-size: 40px;
+    }
 }
 
 .stacks__hire-button {
-    margin-bottom: 19px;
+    margin: 0 auto 20px auto;
 }
 
 .stacks__download-button {
     background-color: transparent;
     color: var(--btn-text);
     border: none;
+    cursor: pointer;
+
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
-.stacks__download-icon {}
+.stacks__download-icon {
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+    .stacks__download-button:hover & {
+        transform: scale(1.2);
+    }
+}
