--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --dark-title-color: #111214;
   --light-title-color: #FFFFFF;
@@ -84,6 +83,12 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+@media (min-width: 1200px) {
+  .section {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+}
 
 .container {
   margin: 0 auto;
@@ -137,6 +142,7 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover, .button:focus {
   background-color: var(--btn-color-hover);
@@ -183,6 +189,11 @@ body {
   font-size: 12px;
   color: var(--nav-link-color);
   text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link:hover, .nav__link:focus {
+  color: var(--active-link-color);
+  transform: scale(1.1);
 }
 .nav__link--current {
   color: var(--active-link-color);
@@ -190,6 +201,10 @@ body {
 .nav__link--contact {
   color: var(--contact-link-color);
   display: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link--contact:hover, .nav__link--contact:focus {
+  transform: scale(1.1);
 }
 @media (min-width: 1200px) {
   .nav__link--contact {
@@ -208,12 +223,22 @@ body {
   gap: 24px;
   align-self: end;
 }
+@media (min-width: 1200px) {
+  .pagination {
+    align-self: center;
+  }
+}
 
 .pagination-btn {
   width: 40px;
   height: 40px;
   border: none;
   background-color: var(--btn-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.pagination-btn:hover, .pagination-btn:focus {
+  background-color: var(--btn-color-hover);
 }
 
 .pagination-icon {
@@ -315,18 +340,16 @@ body {
   border-radius: 50%;
   background-color: var(--icons-background-color);
   color: var(--icons-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.socials__item-link--bg-gray-col-white {
-  background-color: gray;
-  color: white;
-  /* Додайте стилі для посилання з фоном сірого кольору тут */
+.socials__item-link:hover, .socials__item-link:focus {
+  color: var(--active-link-color);
 }
 
 .socials__item-icon {
   width: 20px;
   height: 20px;
-  color: var(--icons-color);
+  fill: currentColor;
 }
 
 @media (min-width: 1200px) {
@@ -387,11 +410,6 @@ body {
 
 .stacks {
   background-image: linear-gradient(to bottom, #F7F7F7 50%, var(--primary-background-color) 50%);
-}
-@media (min-width: 1200px) {
-  .stacks {
-    padding-top: 80px;
-  }
 }
 
 .stacks__list {
@@ -479,6 +497,15 @@ body {
   align-items: center;
 }
 
+.service-title {
+  margin-bottom: 5px;
+}
+@media (min-width: 1200px) {
+  .service-title {
+    margin-bottom: 55px;
+  }
+}
+
 .service__list {
   display: flex;
   gap: 32px;
@@ -493,13 +520,19 @@ body {
 .service__item {
   padding: 40px 20px 20px 20px;
   background-color: #F7F7F7;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .service__item:hover, .service__item:focus {
+  color: var(--light-text-color);
   background-color: var(--active-link-color);
 }
 
 .service__item-icon {
   margin-bottom: 24px;
+  fill: #FE390C;
+}
+.service__item:hover .service__item-icon {
+  fill: var(--icons-color);
 }
 
 .service__item-title {
@@ -509,6 +542,10 @@ body {
   font-weight: 700;
   line-height: var(--primary-text-line-height);
   color: var(--dark-title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.service__item:hover .service__item-title {
+  color: var(--light-title-color);
 }
 
 .portfolio {
@@ -521,6 +558,13 @@ body {
   flex-direction: column;
   margin-bottom: 32px;
 }
+@media (min-width: 1200px) {
+  .portfolio__content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 
 .portfolio__filter {
   display: flex;
@@ -530,8 +574,19 @@ body {
 
 .portfolio__filter-button {
   border: none;
+  padding: 12px 16px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-text-color);
   text-transform: uppercase;
+  cursor: pointer;
+}
+.portfolio__filter-button--current {
+  border: 1px solid var(--active-link-color);
+  color: var(--active-link-color);
+  border-radius: 4px;
+}
+.portfolio__filter-button:hover, .portfolio__filter-button:focus {
+  color: var(--active-link-color);
 }
 
 .portfolio__list {
@@ -540,23 +595,33 @@ body {
   gap: 24px;
 }
 
-.portfolio__list-item-link {
+.portfolio__item {
+  width: 100%;
+}
+@media (min-width: 1200px) {
+  .portfolio__item {
+    flex-basis: calc((100% - 48px) / 3);
+  }
+}
+
+.portfolio__item-link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio__list-item-link:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio__list-item-link:focus {
+.portfolio__item-link:hover, .portfolio__item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio__list-item-img-wrap {
+.portfolio__item-img-wrap {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio__list-item-overlay {
+.portfolio__item-img {
+  width: 100%;
+}
+
+.portfolio__item-overlay {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -571,28 +636,30 @@ body {
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio__list-item-link:hover .portfolio__list-item-overlay {
+.portfolio__item-link:hover .portfolio__item-overlay {
   transform: translateY(0%);
   opacity: 1;
 }
-.portfolio__list-item-link:focus .portfolio__list-item-overlay {
+.portfolio__item-link:focus .portfolio__item-overlay {
   transform: translateY(0%);
   opacity: 1;
 }
 
-.portfolio__list-item-title {
+.portfolio__item-title {
   font-family: var(--heading-font);
   font-size: 32px;
   font-weight: var(--heading-font-weight);
   color: var(--light-title-color);
   text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio__list-item-subtitle {
+.portfolio__item-subtitle {
   font-family: var(--heading-font);
   font-size: 16px;
   font-weight: var(--heading-font-weight);
   color: var(--light-title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .testimonial__image {
