--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -22,6 +22,11 @@ body {
 .section {
     padding-top: 40px;
     padding-bottom: 40px;
+
+    @include desktop {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
 }
 
 .container {
@@ -78,6 +83,8 @@ body {
     text-transform: uppercase;
 
     cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
             background-color: var(--btn-color-hover);
