--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -36,6 +36,13 @@
     font-size: 12px;
     color: var(--nav-link-color);
     text-transform: uppercase;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--active-link-color);
+        transform: scale(1.1);
+    }
 
     &--current {
         color: var(--active-link-color);
@@ -44,7 +51,13 @@
     &--contact {
         color: var(--contact-link-color);
         display: none;
-            
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            transform: scale(1.1);
+        }
+
         @include desktop {
             display: flex;
             justify-content: center;
