--- a/sass/components/_pagination.scss
+++ b/sass/components/_pagination.scss
@@ -2,6 +2,10 @@
     display: flex;
     gap: 24px;
     align-self: end;
+
+    @include desktop {
+        align-self: center;
+    }
 }
 
 .pagination-item {}
@@ -12,6 +16,14 @@
 
     border: none;
     background-color: var(--btn-color);
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--btn-color-hover);
+    }
 }
 
 .pagination-icon {
