--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -7,6 +7,12 @@
     gap: 10px;
     flex-direction: column;
     margin-bottom: 32px;
+
+    @include desktop {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 .portfolio__filter {
@@ -19,9 +25,23 @@
 
 .portfolio__filter-button {
     border: none;
+    padding: 12px 16px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     color: var(--primary-text-color);
-    text-transform: uppercase
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &--current {
+        border: 1px solid var(--active-link-color);
+        color: var(--active-link-color);
+        border-radius: 4px;
+    }
+
+    &:hover,
+    &:focus {
+        color: var(--active-link-color);
+    }
 }
 
 .portfolio__list {
@@ -30,37 +50,35 @@
     gap: 24px;
 }
 
-.portfolio__list-item {
-    // flex-basis: calc((100% - 48px) / 3);
+.portfolio__item {
+    width: 100%;
+    @include desktop {
+        flex-basis: calc((100% - 48px) / 3);
+    }
 }
 
-.portfolio__list-item-link {
+.portfolio__item-link {
     display: block;
-        
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-        &:hover {
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-                1px 4px 6px rgba(0, 0, 0, 0.16);
-        }
-        
-        &:focus {
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-                1px 4px 6px rgba(0, 0, 0, 0.16);
-        }
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
-.link {}
-
-.portfolio__list-item-img-wrap {
+.portfolio__item-img-wrap {
     position: relative;
     overflow: hidden;
 }
 
-.portfolio__list-item-img {
+.portfolio__item-img {
+    width: 100%;
+    
 }
 
-.portfolio__list-item-overlay {
+.portfolio__item-overlay {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,39 +86,41 @@
     position: absolute;
     top: 0;
     left: 0;
-        
+
     width: 100%;
     height: 100%;
-        
+
     background: rgba(0, 0, 0, 0.5);
-        
+
     transform: translateY(100%);
     opacity: 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .portfolio__list-item-link:hover & {
+    .portfolio__item-link:hover & {
         transform: translateY(0%);
         opacity: 1;
     }
-            
-    .portfolio__list-item-link:focus & {
+
+    .portfolio__item-link:focus & {
         transform: translateY(0%);
         opacity: 1;
     }
 }
 
-.portfolio__list-item-title {
+.portfolio__item-title {
     font-family: var(--heading-font);
     font-size: 32px;
     font-weight: var(--heading-font-weight);
     color: var(--light-title-color);
-    text-transform: uppercase
+    text-transform: uppercase;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio__list-item-subtitle {
+.portfolio__item-subtitle {
     font-family: var(--heading-font);
     font-size: 16px;
     font-weight: var(--heading-font-weight);
     color: var(--light-title-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
