--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/common";
 
 @import './components/header';
+@import './components/mob-menu';
 @import './components/pagination';
 @import './components/logo';
 @import './components/hero';
@@ -16,4 +17,3 @@
 @import './components/testomonials';
 @import './components/footer';
 @import './components/form';
-@import './components/mobile-menu';
