--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ body {
 .header {
   position: fixed;
   width: 100%;
-  padding: 35px 16px 0px 16px;
+  padding: 35px 16px;
   background-color: transparent;
 }
 
@@ -218,6 +218,98 @@ body {
   }
 }
 
+.mob-menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  padding: 40px 40px;
+  background-color: rgb(173, 171, 171);
+  overflow: auto;
+}
+@media (min-width: 1200px) {
+  .mob-menu-container {
+    display: none;
+  }
+}
+
+.mob-menu__btn--open {
+  position: absolute;
+  top: 0px;
+  right: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 47px;
+  height: 35px;
+  background-color: transparent;
+  border: 2px solid #57595d;
+  border-radius: 2px;
+}
+@media (min-width: 1200px) {
+  .mob-menu__btn--open {
+    display: none;
+  }
+}
+
+.mob-menu__icon--open {
+  fill: #57595d;
+}
+
+.mob-menu__btn--close {
+  position: absolute;
+  top: 35px;
+  right: 32px;
+}
+
+.mob-menu {
+  height: 80%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mob-nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+}
+
+.mob-nav__link {
+  font-size: 30px;
+  font-weight: 700;
+  color: whitesmoke;
+  text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-nav__link:hover, .mob-nav__link:focus {
+  color: var(--active-link-color);
+  transform: scale(1.1);
+}
+.mob-nav__link--current {
+  color: var(--active-link-color);
+}
+.mob-nav__link--contact {
+  color: var(--contact-link-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  border: 1px solid #FE390C;
+  border-radius: 4px;
+}
+
+.mob-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
 .pagination {
   display: flex;
   gap: 24px;
@@ -227,6 +319,9 @@ body {
   .pagination {
     align-self: center;
   }
+}
+.pagination--to-end {
+  align-self: end;
 }
 
 .pagination-btn {
@@ -662,14 +757,56 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.testimonial__content {
+  position: relative;
+  padding-top: 155px;
+}
+@media (min-width: 1200px) {
+  .testimonial__content {
+    padding-top: 70px;
+    display: flex;
+    gap: 120px;
+  }
+}
+
 .testimonial__image {
   margin-bottom: 32px;
 }
+@media (min-width: 1200px) {
+  .testimonial__image {
+    margin-bottom: 0;
+  }
+}
 
-.testimonial__info {
+.testimonial__wrapper {
   display: flex;
   flex-direction: column;
   margin-top: 40px;
+}
+@media (min-width: 1200px) {
+  .testimonial__wrapper {
+    margin-top: 0;
+    justify-content: space-between;
+  }
+}
+
+.testimonial__info {
+  margin-bottom: 45px;
+}
+@media (min-width: 1200px) {
+  .testimonial__info {
+    margin-bottom: 0;
+  }
+}
+
+.testimonial__title {
+  position: absolute;
+  top: 30px;
+}
+@media (min-width: 1200px) {
+  .testimonial__title {
+    position: static;
+  }
 }
 
 .testimonial__text {
@@ -679,7 +816,6 @@ body {
 
 .testimonial__author {
   font-weight: 400;
-  margin-bottom: 45px;
 }
 
 .testimonial__name {
@@ -694,11 +830,13 @@ body {
 
 .footer-container {
   display: flex;
+  gap: 45px;
   flex-direction: column;
 }
 @media (min-width: 1200px) {
   .footer-container {
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 
@@ -706,11 +844,17 @@ body {
   color: var(--light-title-color);
 }
 
+.footer__content {
+  display: flex;
+  gap: 65px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .footer__contact-list {
   display: flex;
   flex-direction: column;
   gap: 42px;
-  margin-top: 50px;
 }
 
 .footer__contact-link {
@@ -728,9 +872,10 @@ body {
   color: var(--primary-text-color);
 }
 
-.footer__socials {
-  margin-top: 47px;
-  margin-bottom: 47px;
+@media (min-width: 1200px) {
+  .form-wrapper {
+    width: 656px;
+  }
 }
 
 .form-info {
@@ -753,12 +898,27 @@ body {
 
 .form {
   margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.form-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+@media (min-width: 1200px) {
+  .form-fields {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
-  margin-bottom: 32px;
+  flex-basis: calc(50% - 15px);
 }
 
 .form-label {
@@ -796,25 +956,6 @@ body {
   height: 124px;
 }
 
-.mobile-menu__btn--open {
-  position: absolute;
-  top: 0px;
-  right: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 47px;
-  height: 35px;
-  background-color: transparent;
-  border: 2px solid #57595d;
-  border-radius: 2px;
-}
-@media (min-width: 1200px) {
-  .mobile-menu__btn--open {
-    display: none;
-  }
-}
-
-.mobile-menu__icon--open {
-  fill: #57595d;
+.form-button {
+  margin-right: auto;
 }/*# sourceMappingURL=main.css.map */
