--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,10 +4,12 @@
 
 .footer-container {
     display: flex;
+    gap: 45px;
     flex-direction: column;
     
     @include desktop {
         flex-direction: row;
+        justify-content: space-between;
     }
 }
 
@@ -15,7 +17,12 @@
     color: var(--light-title-color);
 }
 
-.footer__content {}
+.footer__content {
+        display: flex;
+        gap: 65px;
+        flex-direction: column;
+        justify-content: space-between;
+}
 
 .footer__address {}
 
@@ -23,7 +30,6 @@
     display: flex;
     flex-direction: column;
     gap: 42px;
-    margin-top: 50px;
 }
 
 .footer__contact-item {}
@@ -46,11 +52,6 @@
 
 .footer__contact-detail {
     color: var(--primary-text-color);
-}
-
-.footer__socials {
-    margin-top: 47px;
-    margin-bottom: 47px;
 }
 
 
