--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,8 @@
-.form-wrapper {}
+.form-wrapper {
+    @include desktop {
+        width: 656px;
+    }
+}
 
 .form-info {
     font-family: var(--heading-font);
@@ -22,13 +26,28 @@
 
 .form {
     margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.form-fields {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    @include desktop {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .form-field {
     display: flex;
     flex-direction: column;
+    flex-basis: calc(50% - 15px);
 
-    margin-bottom: 32px;
+    // margin-bottom: 32px;
 }
 
 .form-label {
@@ -63,4 +82,6 @@
     height: 124px;
 }
 
-.form-button {}
+.form-button {
+    margin-right: auto;
+}
