--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
     position: fixed;
     width: 100%;
-    padding: 35px 16px 0px 16px;
+    padding: 35px 16px;
     background-color: transparent;
 }
 
