--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,13 @@
 .header {
     position: fixed;
     width: 100%;
-    padding: 35px 16px;
+    padding: 15px 16px;
     background-color: transparent;
+
+    &--scroll {
+        background-color: rgba(0, 0, 0, 0.8);
+        transition: background-color 0.5s ease-in-out;
+    }
 }
 
 .header-container {
