--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -1,5 +1,5 @@
 .mob-menu-container {
-    // display: none;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -7,13 +7,17 @@
     height: 100vh;
     z-index: 2;
 
-    padding: 40px 40px;
+    padding: 15px 32px;
 
     background-color: rgb(173, 171, 171);
     overflow: auto;
 
     @include desktop {
         display: none;
+    }
+
+    &.is-open {
+        display: block;
     }
 }
 
@@ -40,15 +44,25 @@
     fill: #57595d;
 }
 
-.mob-menu__btn {
-    &--close{
-        position: absolute;
-        top: 35px;
-        right: 32px;
-    }
+.mob-menu__btn--close{
+    position: absolute;
+    top: 15px;
+    right: 32px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 47px;
+    height: 35px;
+    background-color: transparent;
+    border: 2px solid #57595d;
+    border-radius: 2px;
 }
 
-.mob-menu__icon--close {}
+
+.mob-menu__icon--close {
+    fill: #57595d;
+}
 
 .mob-menu {
     height: 80%;
