--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -1,24 +1,30 @@
 .mob-menu-container {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     z-index: 2;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.3s ease, transform 0.5s ease;
 
     padding: 15px 32px;
 
     background-color: rgb(173, 171, 171);
-    overflow: auto;
 
     @include desktop {
         display: none;
     }
 
     &.is-open {
-        display: block;
+        opacity: 1;
+        transform: translateY(0);
     }
+}
+
+.is-menu-open{
+    overflow: hidden;
 }
 
 .mob-menu__btn--open {
@@ -70,6 +76,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+        overflow: auto;
 }
 
 .mob-nav {}
