--- a/css/main.css
+++ b/css/main.css
@@ -675,6 +675,7 @@ body {
 
 .portfolio {
   background-color: #ECF0F0;
+  position: relative;
 }
 
 .portfolio__content {
@@ -712,6 +713,16 @@ body {
 }
 .portfolio__filter-button:hover, .portfolio__filter-button:focus {
   color: var(--active-link-color);
+}
+
+.portfolio-slider {
+  overflow: hidden;
+}
+.portfolio-slider .swiper-pagination-bullet {
+  height: 3px;
+  width: 15px;
+  background-color: var(--btn-color);
+  border-radius: 0%;
 }
 
 .portfolio__list {
