portfolio-is-done

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,6 +18,7 @@
 
     --primary-background-color: #fff;
     --secondary-background-color: #111214;
+    --portfolio-background-color: #e6e4e4;
 
     --heading-font: 'Anton', sans-serif;
     --text-font: 'Montserrat', sans-serif;
