--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
   --contact-link-color: #FE390C;
   --primary-background-color: #fff;
   --secondary-background-color: #111214;
+  --portfolio-background-color: #e6e4e4;
   --heading-font: "Anton", sans-serif;
   --text-font: "Montserrat", sans-serif;
   --heading-line-height: 1.5;
@@ -719,7 +720,7 @@ body {
   overflow: hidden;
 }
 .portfolio-slider .swiper-pagination-bullet {
-  height: 3px;
+  height: 5px;
   width: 15px;
   background-color: var(--btn-color);
   border-radius: 0%;
@@ -727,6 +728,10 @@ body {
 
 .portfolio__list {
   display: flex;
+}
+
+.portfolio__item {
+  background-color: var(--portfolio-background-color);
 }
 
 .portfolio__item-link {
@@ -747,16 +752,17 @@ body {
 }
 
 .portfolio__item-overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 40px 24px;
+  font-size: 14px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
   background: rgba(0, 0, 0, 0.5);
+  color: var(--light-text-color);
   transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -770,20 +776,24 @@ body {
   opacity: 1;
 }
 
+.portfolio__item-content {
+  padding: 20px 24px;
+}
+
 .portfolio__item-title {
   font-family: var(--heading-font);
-  font-size: 32px;
+  font-size: 22px;
   font-weight: var(--heading-font-weight);
-  color: var(--light-title-color);
+  color: var(--dark-title-color);
   text-transform: uppercase;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__item-subtitle {
   font-family: var(--heading-font);
-  font-size: 16px;
+  font-size: 12px;
   font-weight: var(--heading-font-weight);
-  color: var(--light-title-color);
+  color: var(--dark-title-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
