--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -49,7 +49,7 @@
     overflow: hidden;
 
     & .swiper-pagination-bullet {
-        height: 3px;
+        height: 5px;
         width: 15px;
         background-color: var(--btn-color);
         border-radius: 0%;
@@ -62,12 +62,13 @@
     // gap: 24px;
 }
 
-// .portfolio__item {
+.portfolio__item {
+    background-color: var(--portfolio-background-color);
 //     width: 100%;
 //     @include desktop {
 //         flex-basis: calc((100% - 48px) / 3);
 //     }
-// }
+}
 
 .portfolio__item-link {
     display: block;
@@ -91,18 +92,19 @@
 }
 
 .portfolio__item-overlay {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
 
     width: 100%;
     height: 100%;
+    padding: 40px 24px;
 
+    font-size: 14px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
     background: rgba(0, 0, 0, 0.5);
+    color: var(--light-text-color);
 
     transform: translateY(100%);
     opacity: 0;
@@ -120,19 +122,24 @@
     }
 }
 
+
+.portfolio__item-content {
+    padding: 20px 24px;
+}
+
 .portfolio__item-title {
     font-family: var(--heading-font);
-    font-size: 32px;
+    font-size: 22px;
     font-weight: var(--heading-font-weight);
-    color: var(--light-title-color);
+    color: var(--dark-title-color);
     text-transform: uppercase;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__item-subtitle {
     font-family: var(--heading-font);
-    font-size: 16px;
+    font-size: 12px;
     font-weight: var(--heading-font-weight);
-    color: var(--light-title-color);
+    color: var(--dark-title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
