--- a/css/main.css
+++ b/css/main.css
@@ -435,6 +435,11 @@ body {
     margin-bottom: 12px;
   }
 }
+.hero__title::after {
+  content: "|";
+  margin-left: -12px;
+  font-weight: 100;
+}
 
 .hero__description {
   font-size: 16px;
@@ -536,6 +541,45 @@ body {
 
 .stacks {
   background-image: linear-gradient(to bottom, #F7F7F7 50%, var(--primary-background-color) 50%);
+  position: relative;
+}
+.stacks::before {
+  content: "Fullstack";
+  position: absolute;
+  top: 60%;
+  left: 30%;
+  transform: translate(-50%, -50%) rotate(-30deg);
+  font-size: 60px;
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.03);
+  text-align: center;
+  text-transform: uppercase;
+  z-index: 1;
+}
+@media (min-width: 1200px) {
+  .stacks::before {
+    font-size: 100px;
+    color: rgba(255, 255, 255, 0.01);
+  }
+}
+.stacks::after {
+  content: "Developer";
+  position: absolute;
+  top: 60%;
+  left: 73%;
+  transform: translate(-50%, -50%) rotate(-30deg);
+  font-size: 60px;
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.03);
+  text-align: center;
+  text-transform: uppercase;
+  z-index: 1;
+}
+@media (min-width: 1200px) {
+  .stacks::after {
+    font-size: 100px;
+    color: rgba(255, 255, 255, 0.01);
+  }
 }
 
 .stacks__list {
@@ -551,23 +595,19 @@ body {
   }
 }
 
-.stacks__link {
-  color: #A7AAB4;
+.stacks__icon {
+  fill: #A7AAB4;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.stacks__link:hover {
-  color: #2196f3;
+.stacks__icon:hover {
+  fill: var(--active-link-color);
 }
-.stacks__link:focus {
-  color: #2196f3;
-}
-
-.stacks__icon {
-  fill: currentColor;
+.stacks__icon:focus {
+  fill: var(--active-link-color);
 }
 
 .stacks__actions {
-  background-color: var(--secondary-background-color);
+  background: linear-gradient(-30deg, #111214 0%, #111214 15%, #161719 15%, #161719 50%, #1f2022 50%, #1f2022 60%, #1a1b1d 60%, #1a1b1d 90%, #111214 90%, #111214 100%);
   padding: 50px 80px;
   display: flex;
   flex-direction: column;
@@ -891,7 +931,7 @@ body {
 }
 
 .footer {
-  background-color: var(--secondary-background-color);
+  background: linear-gradient(-30deg, #111214 0%, #111214 15%, #161719 15%, #161719 50%, #1f2022 50%, #1f2022 60%, #1a1b1d 60%, #1a1b1d 90%, #111214 90%, #111214 100%);
 }
 
 .footer-container {
