--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -49,6 +49,12 @@
         font-size: 130px;      
         margin-bottom: 12px;  
     }
+
+    &::after{
+        content: "|";
+        margin-left: -12px;
+        font-weight: 100;
+    }
 }
 
 .hero__description {
