--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -1,8 +1,10 @@
 .stacks {
     background-image: linear-gradient(to bottom, #F7F7F7 50%, var(--primary-background-color) 50%);
     position: relative;
+    overflow: hidden;
 
         &::before {
+                @include tablet { 
                 content: "Fullstack";
                 position: absolute;
                 top: 60%;
@@ -14,14 +16,17 @@
                 text-align: center;
                 text-transform: uppercase;
                 z-index: 1;
+            }
 
                 @include desktop {
                     font-size: 100px;
                     color: rgba(255, 255, 255, 0.01);
                 }
+            
             }
 
             &::after {
+                @include tablet {
                 content: "Developer";
                 position: absolute;
                 top: 60%;
@@ -33,11 +38,13 @@
                 text-align: center;
                 text-transform: uppercase;
                 z-index: 1;
+            }
 
-                @include desktop {
+            @include desktop {
                     font-size: 100px;
                     color: rgba(255, 255, 255, 0.01);
                 }
+           
             }
 }
 
