--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import './components/mob-menu';
 @import './components/pagination';
 @import './components/logo';
-@import './components/hero';
+@import './components/heroes/hero';
 @import './components/socials';
 @import './components/about';
 @import './components/stacks';
@@ -19,3 +19,4 @@
 @import './components/form';
 @import './components/modal';
 @import './components/modal-form';
+@import './components/questions';
