questions-is-done

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: var(text-font);
+    font-family: var(--text-font);
     background-color: var(--primary-background-color);
     color: var(--primary-text-color);
     font-size: 14px;
