--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -10,8 +10,9 @@
                 top: 60%;
                 left: 30%;
                 transform: translate(-50%, -50%) rotate(-30deg);
+                font-family: var(--heading-font);
                 font-size: 60px;
-                font-weight: bold;
+                font-weight: medium;
                 color: rgba(255, 255, 255, 0.03);
                 text-align: center;
                 text-transform: uppercase;
@@ -32,8 +33,9 @@
                 top: 60%;
                 left: 73%;
                 transform: translate(-50%, -50%) rotate(-30deg);
+                font-family: var(--heading-font);
                 font-size: 60px;
-                font-weight: bold;
+                font-weight: medium;
                 color: rgba(255, 255, 255, 0.03);
                 text-align: center;
                 text-transform: uppercase;
