--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ input:-webkit-autofill {
 }
 
 body {
-  font-family: var(text-font);
+  font-family: var(--text-font);
   background-color: var(--primary-background-color);
   color: var(--primary-text-color);
   font-size: 14px;
@@ -476,8 +476,9 @@ body {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 230px;
-  font-weight: bold;
+  font-family: var(--heading-font);
+  font-size: 330px;
+  font-weight: medium;
   color: rgba(255, 255, 255, 0.05);
   text-align: center;
   text-transform: uppercase;
@@ -603,8 +604,9 @@ body {
     top: 60%;
     left: 30%;
     transform: translate(-50%, -50%) rotate(-30deg);
+    font-family: var(--heading-font);
     font-size: 60px;
-    font-weight: bold;
+    font-weight: medium;
     color: rgba(255, 255, 255, 0.03);
     text-align: center;
     text-transform: uppercase;
@@ -624,8 +626,9 @@ body {
     top: 60%;
     left: 73%;
     transform: translate(-50%, -50%) rotate(-30deg);
+    font-family: var(--heading-font);
     font-size: 60px;
-    font-weight: bold;
+    font-weight: medium;
     color: rgba(255, 255, 255, 0.03);
     text-align: center;
     text-transform: uppercase;
@@ -1400,6 +1403,7 @@ body {
 }
 
 .faq {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -1407,10 +1411,58 @@ body {
 
 .faq-item {
   border: 1px solid #DFE2E5;
+}
+
+.faq-title {
+  position: relative;
+  display: block;
   padding: 16px;
+  font-family: var(--heading-font);
+  font-size: 16px;
+  color: var(--dark-title-color);
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+.faq-title:hover {
+  background-color: var(--primary-background-color);
 }
 @media (min-width: 1200px) {
-  .faq-item {
-    padding: 24px;
+  .faq-title {
+    font-size: 20px;
   }
+}
+.faq-input:checked ~ .faq-title {
+  background-color: var(--primary-background-color);
+}
+.faq-title::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  border-style: solid;
+  border-width: 6px 5px 0 5px;
+  border-color: #100d22 transparent transparent transparent;
+}
+.faq-input:checked ~ .faq-title::after {
+  border-width: 0 5px 6px 5px;
+  border-color: transparent transparent #100d22 transparent;
+}
+
+.faq-text {
+  display: none;
+  padding: 11px 12px 16px 12px;
+  background-color: var(--primary-background-color);
+  font-size: 12px;
+  font-weight: medium;
+}
+@media (min-width: 1200px) {
+  .faq-text {
+    padding: 8px 24px 24px 24px;
+    font-size: 14px;
+  }
+}
+.faq-input:checked ~ .faq-text {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
