--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -22,6 +22,7 @@
 }
 
 .faq {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -29,15 +30,69 @@
 
 .faq-item {
     border: 1px solid #DFE2E5;
+}
+
+.faq-input {
+}
+
+.faq-title {
+    position: relative;
+    display: block;
     padding: 16px;
+    font-family: var(--heading-font);
+    font-size: 16px;
+    color: var(--dark-title-color);
+    cursor: pointer;
+
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+        background-color: var(--primary-background-color);
+    }
 
     @include desktop {
-        padding: 24px;
+        font-size: 20px;
+    }
+
+    .faq-input:checked~& {
+        background-color: var(--primary-background-color);
+    }
+
+    &::after{
+        content: "";
+        display: block;
+
+        position: absolute;
+        top: 50%;
+        right: 25px;
+        transform: translateY(-50%);
+
+        border-style: solid;
+        border-width: 6px 5px 0 5px;
+        border-color: #100d22 transparent transparent transparent;
+
+        .faq-input:checked~& {
+            border-width: 0 5px 6px 5px;
+            border-color: transparent transparent #100d22 transparent;
+        }
+    
     }
 }
 
-.faq-input {}
+.faq-text {
+    display: none;
+    padding: 11px 12px 16px 12px;
+    background-color: var(--primary-background-color);
 
-.faq-title {}
+    font-size: 12px;
+    font-weight: medium;
 
-.faq-text {}
+    @include desktop {
+        padding: 8px 24px 24px 24px;
+        font-size: 14px;
+    }
+
+    .faq-input:checked ~&{
+        display: block;
+    }
+}
