--- a/sass/components/heroes/_hero.scss
+++ b/sass/components/heroes/_hero.scss
@@ -95,19 +95,18 @@
     }
 
         &::after {
-            // @include desktop {
                 content: "Portfolio";
                 position: absolute;
                 top: 45%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                font-size: 230px;
-                font-weight: bold;
+                font-family: var(--heading-font);
+                font-size: 330px;
+                font-weight: medium;
                 color: rgba(255, 255, 255, 0.05);
                 text-align: center;
                 text-transform: uppercase;
                 z-index: 1;
-            // }                
         }
 }
 
